# 100x

./: .env.example  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
.claude/: RULE_LOADING.md  context.md
.claude/commands/: load-rules.md
.cursor/rules/: README.md  jinja2-templates.mdc
.cursor/rules/ai/: agent-file-format.mdc
.github/: dependabot.yml
.github/workflows/: build.yml
ai/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py
ai/agents/: __init__.py  base_agent.py  patrick.agent.md
ai/agents/shared/: heart_centered.jinja
ai/core/: __init__.py  agent_config.py  config.py  openrouter.py  validators.py
ai/tests/: __init__.py  test_agent_config.py  test_base_agent.py  test_openrouter.py
ai/tests/fixtures/: simple_test.agent.md
cli/: __init__.py  agents.py  main.py
cli/tests/: test_agents_cli.py  test_cli_error_messages.py
context/: 100x-agent-system-README.md  100x-framework.md  data-ingestion-strategy.md  knowledge-base-agent.md  knowledge-base-purpose.md  limitless-dropbox-workflow.md  overall-project-context.md  project-management-purpose.md
helpers/: __init__.py  logger.py  observability.py
helpers/tests/: test_observability.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
scripts/: validate_agents.py
tests/: __init__.py  test_precommit.py  test_requirements.py
